--- a/flixbux.html
+++ b/flixbux.html
@@ -6,8 +6,19 @@
   <title>FlixBus</title>
 </head>
 <body>
-<elevenlabs-convai agent-id="agent_01k0d5yxhwf1svkahkcxhaqxm2"></elevenlabs-convai><script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
+<elevenlabs-convai agent-id="agent_01k0d5yxhwf1svkahkcxhaqxm2"></elevenlabs-convai><script src="https://unpkg.com/@elevenlabs/convai-widget-embed" type="text/javascript"></script>
 
+<script>
+const el = document.querySelector('elevenlabs-convai');
+const root = el?.shadowRoot;
+
+if (root && !root.querySelector('#hide-elevenlabs-style')) {
+  const style = document.createElement('style');
+  style.id = 'hide-elevenlabs-style';
+  style.textContent = `.opacity-30 { display: none !important; }`;
+  root.appendChild(style);
+}  
+</script>
 <div style="margin: 20px; padding: 15px; background-color: #f0f0f0; border-radius: 8px;">
   <h3>FlixBus Trip Tracking</h3>
   <p>You can use the FlixBus website to track your trip: <a href="https://global.flixbus.com/track" target="_blank">https://global.flixbus.com/track</a></p>
