--- a/chat.html
+++ b/chat.html
@@ -3,33 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FlixBus</title>
+  <title>Greyhound</title>
 </head>
 <body>
 
-<div>
-  <script src="http://localhost:3000/dist/mcp-chat-widget.js"></script>
-  <mcp-chat-widget 
-    widget-id="1"
-    name="Greyhound"
-    description="Hi, this is Alex from Greyhound. How can I assist you today?"
-    position="bottom-right"
-    size="md"
-    base-url="http://localhost:3000">
-  />
+<div style="margin: 20px; padding: 15px; background-color: #f0f0f0; border-radius: 8px;">
+  <h3>Greyhound Trip Tracking</h3>
+  <p>You can use the FlixBus website to track your trip: <a href="https://global.flixbus.com/track" target="_blank">https://global.flixbus.com/track</a></p>
+  
+  <h4>Test Booking Numbers:</h4>
+  <ul>
+    <li><strong>Greyhound:</strong> 3214337745 (old)</li>
+    <li><strong>Flixbus:</strong> 3269110182</li>
+  </ul>
 </div>
 
-
-
-<div style="margin: 20px; padding: 15px; background-color: #f0f0f0; border-radius: 8px;">
-  <h3>FlixBus यात्रा ट्रैकिंग</h3>
-  <p>आप अपनी यात्रा को ट्रैक करने के लिए FlixBus वेबसाइट का उपयोग कर सकते हैं: <a href="https://global.flixbus.com/track" target="_blank">https://global.flixbus.com/track</a></p>
-  
-  <h4>परीक्षण बुकिंग नंबर:</h4>
-  <ul>
-    <li>3214337745 (पुराना)</li>
-    <li>3269110182</li>
-  </ul>
+<div>
+  <script src="https://mcp-chat-c122.onrender.com/dist/mcp-chat-widget.js"></script>
+  <mcp-chat-widget 
+    widget-id="1"
+    position="bottom-right"
+    size="md"
+    base-url="https://mcp-chat-c122.onrender.com">
+  />
 </div>
 
 </body>
