add translation to chat

--- a/chat-hindi.html
+++ b/chat-hindi.html
@@ -21,6 +21,13 @@
 <div>
   <script src="https://mcp-chat-c122.onrender.com/dist/mcp-chat-widget.js"></script>
   <mcp-chat-widget 
+    start-conversation-label="अपना संदेश भेजकर बातचीत शुरू करें"
+    type-message-placeholder="अपना संदेश लिखें..."
+    return-to-chat-label="चैट पर वापस जाएं"
+    chat-history-label="चैट इतिहास"
+    new-chat-label="नई चैट"
+    maximize-label="अधिकतम करें"
+    no-chat-history-label="कोई चैट इतिहास नहीं मिला"
     widget-id="2"
     position="bottom-right"
     size="md"
