--- a/chat.html
+++ b/chat.html
@@ -24,7 +24,7 @@
     widget-id="1"
     position="bottom-right"
     size="md"
-    base-url="https://mcp-chat-c122.onrender.com">
+    base-url="https://mcp-chat-c122.onrender.com"
   />
 </div>
 
