--- a/flixbus-german-chat.html
+++ b/flixbus-german-chat.html
@@ -24,7 +24,15 @@
     widget-id="3"
     position="bottom-right"
     size="md"
-    base-url="https://mcp-chat-c122.onrender.com">
+    base-url="https://mcp-chat-c122.onrender.com"
+    start-conversation-label="Senden Sie eine Nachricht, um die Unterhaltung zu beginnen"
+    type-message-placeholder="Geben Sie Ihre Nachricht ein..."
+    return-to-chat-label="Zurück zum Chat"
+    chat-history-label="Chat-Verlauf"
+    new-chat-label="Neuer Chat"
+    maximize-label="Maximieren"
+    no-chat-history-label="Kein Chat-Verlauf gefunden"
+    >
   />
 </div>
 </body>
