translate mcp integration

--- a/chat-hindi.html
+++ b/chat-hindi.html
@@ -28,6 +28,11 @@
     new-chat-label="नई चैट"
     maximize-label="अधिकतम करें"
     no-chat-history-label="कोई चैट इतिहास नहीं मिला"
+    processing-request-label="अनुरोध संसाधित हो रहा है..."
+    queued-label="कतारबद्ध"
+    information-retrieved-label="जानकारी पुनः प्राप्त की गई"
+    gathering-information-label="जानकारी एकत्र की जा रही है"
+
     widget-id="2"
     position="bottom-right"
     size="md"
