--- a/flixbus-german-chat.html
+++ b/flixbus-german-chat.html
@@ -32,6 +32,11 @@
     new-chat-label="Neuer Chat"
     maximize-label="Maximieren"
     no-chat-history-label="Kein Chat-Verlauf gefunden"
+    processing-request-label="Anfrage wird bearbeitet..."
+    queued-label="In Warteschlange"
+    information-retrieved-label="Informationen abgerufen"
+    gathering-information-label="Informationen werden gesammelt"
+
     >
   />
 </div>
